<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_app_512" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_splash"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        android:text="不仅仅是工具"
        android:textColor="#C0C0C0"
        android:textSize="16sp" />

    <com.zj.weddingtool.base.widget.TitanicTextView
        android:id="@+id/tv_titanic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_splash"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_slogan"
        android:textColor="#C0C0C0"
        android:textSize="17sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="10sp"
        android:text="@string/app_copyright"
        android:textColor="@color/text_color_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textSize="10sp"
        android:text="@string/app_version_name"
        android:textColor="@color/text_color_light"/>

</RelativeLayout>